--- a/myblog/templates/blog/post_detail.html
+++ b/myblog/templates/blog/post_detail.html
@@ -5,6 +5,7 @@
 <title>{{ post.title }}</title>
 {% endblock %}
 {% block ogtags %}
+<meta property="og:type" content="Sujin Lee:Post" />
 <meta property="og:title" content="{{ post.title }}" />
 <meta property="og:description" content="{{ post.summary|truncatechars:230 }}" />
 <meta property="og:image"content="http://sujinlee.me/{{ post.image.url }}" />
@@ -105,23 +106,28 @@
 <div class="go-top"><i class="fa fa-angle-up"></i></div>
 <script>
   // facebook share
-    function fbshare() {
-        FB.ui({
-                app_id: '1081681621896558'
-                method: 'share_open_graph',
-                action_type: 'og.shares',
-                mobile_iframe: true,
-                action_properties: JSON.stringify({
-                    object: 'http://sujinlee.me/blog/{{post.slug }}/',
-                    }
-                })
-                function(response) {
-                  if (response && !response.error_message) {
-                    alert('Posting completed.');
-                  } else {
-                    alert('Error while posting.');
-                  }
-            });
-    }
+  function fbshare() {
+    FB.ui({
+        method: 'share_open_graph',
+        action_type: 'og.shares',
+        action_properties: JSON.stringify({
+          object: {
+            'og:url': 'http: //sujinlee.me/blog/{{ blog.slug }}',
+            'og:title': '{{ blog.title }}',
+            'og:description': '{{ blog.summary|truncatechars:230 }}',
+            'og:image': 'http://www.sujinlee.me/{{ blog.image.url }}/',
+            'og:type': 'Sujin Lee:blog',
+          }
+        })
+      },
+
+      function(response) {
+        if (response && !response.error_message) {
+          // then get post content
+          alert('successfully posted');
+        } else {
+          alert('Something went error.');
+        }
+      });
 </script>
 {% endblock %}
