edit <pre> fontsize and <h1>

--- a/myblog/templates/blog/project_detail.html
+++ b/myblog/templates/blog/project_detail.html
@@ -58,15 +58,15 @@
         <div class="more-button">
           <i class="fa fa-share-alt"></i>
           <div class="container">
-            <a class="facebook share-btn" href="#"
+            <a class="facebook share-btn customer share"
               target="_blank" onclick="fbshare()">
             <i class="fa fa-facebook"></i></a>
-            <a class="twitter customer share share-btn"
+            <a class="twitter customer share share-btn customer share"
               href="http://twitter.com/share?url=http://sujinlee.me/project/{{ project.slug }}
               &amp;text={{ project.title }} http://sujinlee.me/blog/{{ project.slug }} via @sujinleeme &amp;hashtags={{ project.category.title }}"
               target="_blank" title="Twitter Share">
             <i class="fa fa-twitter"></i></a>
-            <a class="google_plus customer share share-btn"
+            <a class="google_plus customer share share-btn customer share"
               href="https://plus.google.com/share?url=http://sujinlee.me/project/{{ project.slug }}"
               target="_blank" title="Google Plus Share">
             <i class="fa fa-google-plus"></i></a>
