--- a/myblog/templates/blog/post_detail.html
+++ b/myblog/templates/blog/post_detail.html
@@ -58,15 +58,15 @@
         <div class="more-button">
           <i class="fa fa-share-alt"></i>
           <div class="container">
-            <a class="facebook share-btn" href="#"
+            <a class="facebook share-btn customer share"
               target="_blank" onclick="fbshare()">
             <i class="fa fa-facebook"></i></a>
-            <a class="twitter share-btn"
+            <a class="twitter share-btn customer share"
               href="http://twitter.com/share?url=http://sujinlee.me/blog/{{ post.slug }}
               &amp;text={{ post.title }} http://sujinlee.me/blog/{{ post.slug }} via @sujinleeme &amp;hashtags={{ post.category.title }}"
               target="_blank" title="Twitter Share">
             <i class="fa fa-twitter"></i></a>
-            <a class="google_plus share-btn"
+            <a class="google_plus share-btn customer share"
               href="https://plus.google.com/share?url=http://sujinlee.me/blog/{{ post.slug }}"
               target="_blank" title="Google Plus Share">
             <i class="fa fa-google-plus"></i></a>
