--- a/myblog/templates/blog/index.html
+++ b/myblog/templates/blog/index.html
@@ -22,7 +22,7 @@
 </div>
 <div class="index-title">
   <a href="/about" class="index-title_style rippleria-dark" rippleria>
-    <h1>Sujin Lee</h1>
+    <h1>SUJIN LEE</h1>
     <h2>{ the connectivist }</h2>
     <img class="svg index-icon" src="{% static 'image/svg-icons/code.svg' %}">
     <img class="svg index-icon" src="{% static 'image/svg-icons/close.svg' %}">
