--- a/myblog/templates/blog/post_detail.html
+++ b/myblog/templates/blog/post_detail.html
@@ -14,7 +14,7 @@
 {% block content %}
 <section class="page-name">
   <h1> { BLOG }</h1>
-  <p> Learning, Experiences, Thoughts </p>
+  <p>/* Now is better than Never */</p>
 </section>
 <article class="mdl-grid">
   <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
