--- a/myblog/templates/blog/post_list.html
+++ b/myblog/templates/blog/post_list.html
@@ -3,8 +3,8 @@
 {% block content %}
 <style></style>
 <section class="page-name">
-  <h1> { BLOG }</h1>
-  <p> Learning, Experiences, Thoughts </p>
+  <h1>{ BLOG }</h1>
+  <p>/* Now is better than Never */</p>
 </section>
 <div class="card-warpper">
   <div class="mdl-grid">
