--- a/myblog/templates/blog/project_detail.html
+++ b/myblog/templates/blog/project_detail.html
@@ -13,8 +13,8 @@
 {% endblock %}
 {% block content %}
 <section class="page-name">
-  <h1> { PROJECT }</h1>
-  <p> Web, Music </p>
+  <h1>{ PROJECT }</h1>
+  <p>/* Web & Music */</p>
 </section>
 <article class="mdl-grid">
   <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
