--- a/myblog/static/css/text.css
+++ b/myblog/static/css/text.css
@@ -91,9 +91,9 @@ h1,h2,h3,h4,h5 {
   cursor: text;
   position: relative;
   letter-spacing: .005em;
-  font-weight: 200;
+  font-weight: 600;
   color: #030304;
-  font-family: 'Montserrat',sans-serif;
+  font-family: 'Josefin Sans', sans-serif;
 }
 
 .markdown-body h2:before {
