--- a/myblog/templates/blog/base.html
+++ b/myblog/templates/blog/base.html
@@ -11,10 +11,8 @@
     <title>Sujin Lee</title>
     {% endblock %}
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="//fonts.googleapis.com/css?family=Josefin+Sans:400,600,700" rel="stylesheet">
     <link href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css" rel='stylesheet' type='text/css'>
-    <link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-jp.css' rel='stylesheet' type='text/css'>
-    <link href='//fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-    <link href='//fonts.googleapis.com/css?family=Montserrat+Alternates:400,700' rel='stylesheet' type='text/css'>
     <link href="//fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
     <link href="{% static 'css/mdl-grid.css' %}" rel="stylesheet">
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
@@ -37,7 +35,7 @@
     <div id="wrapper">
       <header id ="header" class="nav-wrap">
         <div class="title"><a href="/">
-          <i class="fa fa-connectdevelop fa-2.5x" aria-hidden="true"></i></a>
+          <i class="fa fa-connectdevelop fa-2.8x" aria-hidden="true"></i></a>
         </div>
         <nav class="Offscreen Nav-List">
           <a href="#" class="Meun-Button">
