--- a/myblog/templates/blog/project_list.html
+++ b/myblog/templates/blog/project_list.html
@@ -3,7 +3,7 @@
 {% block content %}
 <section class="page-name">
    <h1>{ PROJECT }</h1>
-   <p> Web, Music </p>
+   <p> /* Web & Music */ </p>
 </section>
 <div class="card-warpper">
 <div class="mdl-grid">
