added new fonts

--- a/myblog/templates/blog/base.html
+++ b/myblog/templates/blog/base.html
@@ -35,7 +35,7 @@
     <div id="wrapper">
       <header id ="header" class="nav-wrap">
         <div class="title"><a href="/">
-          <i class="fa fa-connectdevelop fa-2.8x" aria-hidden="true"></i></a>
+          <i class="fa fa-connectdevelop" aria-hidden="true"></i></a>
         </div>
         <nav class="Offscreen Nav-List">
           <a href="#" class="Meun-Button">
