--- a/myblog/templates/blog/post_list.html
+++ b/myblog/templates/blog/post_list.html
@@ -1,7 +1,7 @@
 {% extends 'blog/base.html' %}
 {% load staticfiles %}
 {% block content %}
-<style></style>
+<title>BLOG | Sujin Lee</title>
 <section class="page-name">
   <h1>{ BLOG }</h1>
   <p>/* Now is better than Never */</p>
