--- a/myblog/static/css/text.css
+++ b/myblog/static/css/text.css
@@ -11,7 +11,7 @@ header {
 body {
   -webkit-font-smoothing: antialiased;
   font-family: 'Spoqa Han Sans','Spoqa Han Sans JP','Sans-serif';
-  color: #1d2224;
+  color: #353a3d;
   line-height: 1.6;
   word-wrap: break-word;
 }
@@ -85,15 +85,15 @@ a.anchor {
   bottom: 0;
 }
 
+
 h1,h2,h3,h4,h5 {
   margin: 20px 0 10px;
   padding: 0;
   cursor: text;
   position: relative;
   letter-spacing: .005em;
-  font-weight: 600;
-  color: #030304;
-  font-family: 'Josefin Sans', sans-serif;
+  font-weight: 400;
+  color: #050505;
 }
 
 .markdown-body h2:before {
