--- a/myrun/static/css/myrun.css
+++ b/myrun/static/css/myrun.css
@@ -20,6 +20,14 @@ a {
     color: #fff !important;
 }
 
+canvas {
+    text-align: center;
+}
+
+.weather_icon {
+    padding: 1em;
+}
+
 h1 {
     font-size: 3.4em;
     left: 0;
@@ -55,15 +63,13 @@ p {
     text-transform: uppercase;
     font-weight: 100;
     text-align: center;
-    margin-bottom: 15px;
     z-index: 0;
 }
-
 .tbl-header {
     background-color: rgba(255, 255, 255, 0.1);
 }
 .tbl-content {
-    height: 500px;
+    height: 65vh;
     overflow-x: auto;
     margin-top: 0px;
     border: 1px solid rgba(255, 255, 255, 0.1);
@@ -85,7 +91,7 @@ th {
     z-index: -1;
 }
 td {
-    padding: 15px;
+    padding: 1em;
     text-align: center;
     vertical-align: middle;
     font-weight: 400;
@@ -111,6 +117,7 @@ tbody td:hover:before {
     background-color: rgba(255, 255, 255, 0.2);
     z-index: -1;
 }
+
 .footer {
     padding: 0;
     position: absolute;
@@ -123,6 +130,10 @@ tbody td:hover:before {
     border-top: solid 1px rgba(255, 255, 255, 0.1);
     background: -webkit-linear-gradient(left, #48BBDE, #F47EC6);
     background: linear-gradient(to right, #48BBDE, #F47EC6);
+}
+.footer a {
+  font-weight: 400;
+  text-decoration: none;
 }
 .today {
     text-align: left;
@@ -138,7 +149,9 @@ tbody td:hover:before {
     padding: 5px 8px;
     border-radius: 15px;
     font-weight: 400;
+    margin-top: -2em;
 }
+
 ::-webkit-scrollbar {
     width: 16px;
 }
@@ -150,10 +163,10 @@ tbody td:hover:before {
 }
 .main_image {
     opacity: 0.18;
-    position: fixed;
+    position: absolute;
     top: 0%;
     right: 0%;
-    width: 50%;
+    width: 53%;
     z-index: 0;
 }
 /*
@@ -261,3 +274,10 @@ available at : http://codepen.io/svenschebaum/pen/IlABK
 	-webkit-animation: ani-mouse 2.5s linear infinite;
 	-moz-animation: ani-mouse 2.5s linear infinite;
 	animation: ani-mouse 2.5s linear infinite;
+}
+
+@media only screen and (max-width: 1440px) {
+  .tbl-content {
+    height: 70vh;
+  }
+}
