--- a/myrun/templates/marathon/event_list.html
+++ b/myrun/templates/marathon/event_list.html
@@ -7,21 +7,23 @@
     <meta name="description" content="마라톤 온라인이 제공하는 2016년간 행사 데이터를 크롤링한 웹페이지입니다.">
     <meta name="viewport" content="initial-scale=1, width=device-width, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <meta name="author" content="Sujin Lee">
-    <meta property="fb:admins" content="1234" />
     <meta property="fb:app_id" content="1081681621896558" />
-    <meta property="og:url" content="http://www.sujinlee.me/marathon-event" />
+    <meta property="og:url" content="http://www.sujinlee.me/marathon-event/" />
     <meta property="og:type" content="website" />
-    <meta property="article:author" content="https://www.facebook.com/sujiniworld" />
+    <meta property="article:author" content="https://www.facebook.com/sujiniworld/" />
     <meta property="og:title" content="#마라톤, 같이 달려볼래? 한눈에 보는 2016 마라톤 대회" />
     <meta property="og:description" content="마라톤 온라인이 제공하는 2016년간 행사 데이터를 크롤링한 웹페이지입니다." />
-    <meta property="og:image" content="http://www.sujinlee.me/static/image/run_logo.png" />
-    <link rel="icon" type="image/png" href="{% static 'image/run_logo.png' %}">
+    <meta property="og:image" content="http://www.sujinlee.me/static/image/run_logo.png/" />
+    <link rel="logo" type="image/png" href="{% static 'image/run_logo.png' %}">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css" rel='stylesheet' type='text/css'>
     <link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-jp.css' rel='stylesheet' type='text/css'>
     <link href="{% static 'css/onepage-scroll.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static 'css/myrun.css' %}" rel="stylesheet" type="text/css">
     <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="{% static 'js/jquery.onepage-scroll.js' %}"  type="text/javascript"></script>
+    <script src="{% static 'js/myrun.js' %}"  type="text/javascript"></script>
+    <script src="{% static 'js/skycons.js' %}" type="text/javascript"></script>
     <script>
       $(document).ready(function(){
          $(".main").onepage_scroll({
@@ -29,10 +31,7 @@
            responsiveFallback: 600,
          });
       });
-
     </script>
-    <script src="{% static 'js/jquery.onepage-scroll.js' %}"></script>
-    <script src="{% static 'js/myrun.js' %}"></script>
   </head>
   <body>
     <!--facebook plugin-->
@@ -49,6 +48,7 @@
       <div class="main">
         <section class="page1">
           <div class="page_container">
+            
             <h1>#마라톤, 같이 달려볼래?</h1>
             <h2>올해 전국에서 {{ count_total_events}}개 대회가 열린대. 도전해볼까?</h2>
             <div class="today">{{ today }}</div>
@@ -91,14 +91,17 @@
                 <tbody>
                   {% for event in upcoming_events %}
                   <tr>
-                    <td>{{ event.date }}</td>
+                    <td>{{ event.date }}
+                        <canvas class="{{ event.weather }} weather_icon" width="30" height="30"></canvas></br>
+                        {{ event.temperature }}
                     <td>
                       <p class="city">{{ event.city }}</p>
-                      <a href="{{ event.website }}">{{ event.title }}</a>
+                      <a href="{{ event.website }}" class="NewTab">{{ event.title }}</a>
                     </td>
                     <td>{{ event.application_period }}</td>
                     <td>{{ event.race }}</td>
-                    <td>{{ event.location }}</td>
+                    <td><a href="{{ event.map_url }}" class="NewTab">
+                        {{ event.location }}</a></td>
                     <td>{{ event.description|truncatechars:100 }}</td>
                     <td>{{ event.host }} </br>
                         {{ event.phone }} </br>
@@ -134,14 +137,17 @@
                 <tbody>
                   {% for event in past_events %}
                   <tr>
-                    <td>{{ event.date }}</td>
+                    <td>{{ event.date }}
+                        <canvas class="{{ event.weather }} weather_icon" width="30" height="30"></canvas></br>
+                        {{ event.temperature }}
                     <td>
                       <p class="city">{{ event.city }}</p>
-                      <a href="{{ event.website }}">{{ event.title }}</a>
+                      <a href="{{ event.website }}" class="NewTab">{{ event.title }}</a>
                     </td>
                     <td>{{ event.application_period }}</td>
                     <td>{{ event.race }}</td>
-                    <td>{{ event.location }}</td>
+                    <td><a href="{{ event.map_url }}" class="NewTab">
+                        {{ event.location }}</a></td>
                     <td>{{ event.description|truncatechars:100 }}</td>
                     <td>{{ event.host }} </br>
                         {{ event.phone }} </br>
@@ -157,12 +163,39 @@
       </div>
       <div class="footer">
         <a href="http://www.marathon.pe.kr/schedule_index.html">
-          <h4>마라톤 온라인
-        </a>
-        이 제공하는 2016년간 행사 데이터를 크롤링한 웹페이지 입니다. 파이썬 웹 프레임워크 <a href="https://www.djangoproject.com/">Django</a>로 만들었습니다.
-        <a href="https://github.com/sujinleeme/official-website/tree/master/myrun">[github]</a></h4>
+        <h4>마라톤 온라인</a>이 제공하는 2016년간 행사 데이터를 크롤링한 웹페이지 입니다. 파이썬 웹 프레임워크 <a href="https://www.djangoproject.com/">Django</a>로 만들었습니다.
+        <a href="https://github.com/sujinleeme/official-website/tree/master/myrun"><i class="fa fa-github" aria-hidden="true"></i></a></br>
+            <a href="http://www.sujinlee.me/"> Code & Design. SUJIN LEE</a>
+        </h4>
       </div>
     </div>
+  </div>
+
+    <script>
+     var icons = new Skycons({"color":"white"}),
+    list = [
+      "clear-day",
+      "clear-night",
+      "partly-cloudy-day",
+      "partly-cloudy-night",
+      "cloudy",
+      "rain",
+      "sleet",
+      "snow",
+      "wind",
+      "fog"
+     ],
+    i;
+for(i = list.length; i--; ) {
+    var weatherType = list[i],
+        elements = document.getElementsByClassName( weatherType );
+    for (e = elements.length; e--;){
+        icons.set( elements[e], weatherType );
+    }
+}
+
+icons.play()
+    </script>
     <!--google-analytics-->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
