--- a/myrun/static/css/myrun.css
+++ b/myrun/static/css/myrun.css
@@ -1,38 +1,83 @@
 body {
-    -webkit-font-smoothing: antialiased;
     font-family: 'Spoqa Han Sans', 'Spoqa Han Sans JP', 'Sans-serif';
     word-wrap: break-word;
-    line-height: 1.6;
     color: #fff;
-    background: -webkit-linear-gradient(left, #48BBDE, #F47EC6);
-    background: linear-gradient(to right, #48BBDE, #F47EC6);
+    line-height: 1.5;
+    -webkit-font-smoothing: antialiased;
+    background: #4BFB6C;
+    overflow: hidden;
 }
-a {
-    color: #fff;
+/* Preloader */
+#preloader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+	  background-color: #1a1a1a;  
+    z-index: 99;
+}
+#status {
+    width: 200px;
+    height: 200px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    background-image: url("../image/loading.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    margin: -100px 0 0 -100px;
+}
+.loader {
+    position: absolute;
+    left: 50%;
+    margin: 0 0 2em;
+    height: 200px;
+    top: 50%;
+    text-align: center;
+    padding: 1em;
+    margin: 0 auto 1em;
+    display: inline-block;
+    vertical-align: top;
 }
 
-.fb-like {
-    padding-top: 1em;
-    color: #fff;
+/* social */
+.fb_iframe_widget {
+    float: left;
+}
+.twitter-share-button {
+    float: left;
+    margin-right: 5px;
 }
 
-#u_0_3 {
-    color: #fff !important;
+/* home */
+mark.dash {
+    color: #4BFB6C;
+    background: none;
 }
-
+mark.highlighter {
+    background: none;
+    border-bottom: 5px solid #4BFB6C;
+    color: inherit;
+    transition: background 0.1s cubic-bezier(.33, .66, .66, 1);
+}
 h1 {
     font-size: 3.4em;
     left: 0;
     text-transform: uppercase;
     font-weight: 600;
+    font-family: 'Roboto Condensed', sans-serif;
+    z-index: 0;
     text-align: left;
-    margin-bottom: 15px;
+    color: #F4F2F9;
+    margin-bottom: 1rem;
+    padding: 0;
+    margin: 0;
 }
 h2 {
-    font-size: 1.7em;
+    font-size: 0.9rem;
     font-weight: 400;
     text-align: left;
-    margin-bottom: 15px;
 }
 h3 {
     font-size: 1.7em;
@@ -49,14 +94,8 @@ h4 {
     margin-bottom: 15px;
     z-index: 9;
 }
-p {
-    font-size: 1em;
-    color: #fff;
-    text-transform: uppercase;
-    font-weight: 100;
-    text-align: center;
-    z-index: 0;
-}
+
+/* data table */
 .tbl-header {
     background-color: rgba(255, 255, 255, 0.1);
 }
@@ -69,32 +108,32 @@ p {
 table {
     width: 100%;
     table-layout: fixed;
-    border-radius: 10px;
     overflow: scroll !important;
     z-index: -1;
+    background: rgba(255, 255, 255, 0.5);
 }
 th {
     padding: 0.8em 0.8em;
     text-align: left;
     font-weight: 600;
-    font-size: 0.9em;
+    font-size: 0.7rem;
     text-transform: uppercase;
     white-space: nowrap;
     z-index: -1;
 }
 td {
-    padding: 1em;
+    padding: 0.9rem;
     text-align: center;
     vertical-align: middle;
     font-weight: 400;
-    font-size: 0.85em;
-    border-bottom: solid 1px rgba(255, 255, 255, 0.1);
+    font-size: 0.75rem;
+    border-bottom: solid 1px rgba(255, 255, 255, 0.8);
 }
 th {
     text-align: center;
 }
 tbody tr:hover {
-    background-color: rgba(255, 255, 255, 0.3);
+    background-color: rgba(255, 255, 255, 0.7);
 }
 tbody td {
     position: relative;
@@ -106,10 +145,9 @@ tbody td:hover:before {
     right: 0;
     top: -9999px;
     bottom: -9999px;
-    background-color: rgba(255, 255, 255, 0.2);
+    background-color: rgba(255, 255, 255, 0.7);
     z-index: -1;
 }
-
 .footer {
     padding: 0;
     position: absolute;
@@ -120,163 +158,515 @@ tbody td:hover:before {
     width: 100%;
     z-index: 99;
     border-top: solid 1px rgba(255, 255, 255, 0.1);
-    background: -webkit-linear-gradient(left, #48BBDE, #F47EC6);
-    background: linear-gradient(to right, #48BBDE, #F47EC6);
 }
 .footer a {
-  font-weight: 400;
-  text-decoration: none;
+    font-weight: 400;
+    text-decoration: none;
 }
-.today {
-    text-align: left;
+.today h2 {
     font-weight: 100;
-    font-size: 1.3em;
 }
 .city {
-    background: rgba(255, 255, 255, 0.1);
-    color: #fff;
-    font-size: 12px;
+    background: rgba(255, 255, 255, 0.5);
+    color: #1a1a1a;
     position: relative;
-    width: 2em;
+    width: 2.9rem;
+    font-size: 0.7rem;
     padding: 5px 8px;
     border-radius: 15px;
     font-weight: 400;
-    margin-top: -2em;
+    margin: -2em 0 0.4em 0;
+    display: block;
+    border: 1px solid #1a1a1a;
+}
+#table_scroll::-webkit-scrollbar {
+    width: 2.5vh;
+}
+#table_scroll::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 2.5vh rgba(255, 255, 255, 0.9);
+}
+#table_scroll::-webkit-scrollbar-thumb {
+    box-shadow: inset 0 0 2.5vh rgba(255, 255, 255, 0.9);
 }
 
-::-webkit-scrollbar {
-    width: 16px;
-}
-::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 16px rgba(255, 255, 255, 0.4);
-}
-::-webkit-scrollbar-thumb {
-    -webkit-box-shadow: inset 0 0 16px rgba(255, 255, 255, 0.4);
-}
-.main_image {
-    opacity: 0.18;
-    position: absolute;
-    top: 0%;
-    right: 0%;
-    width: 53%;
-    z-index: 0;
-}
 .weather_icons {
-    fill: #fff;
     width: 4rem;
     height: 4rem;
     display: block;
     margin: auto auto -0.5rem auto;
 }
-/*
-title: Animated Mouse-scroll Down Button
-author: Sven
-available at : http://codepen.io/svenschebaum/pen/IlABK
-*/
-@-webkit-keyframes ani-mouse {
-	0% {
-	opacity: 1;
-	top: 29%;
-	}
-	15% {
-	opacity: 1;
-	top: 50%;
-	}
-	50% {
-	opacity: 0;
-	top: 50%;
-	}
-	100% {
-	opacity: 0;
-	top: 29%;
-	}
+.weather_icons path {
+    fill: #1a1a1a !important;
+    transition: all .5s;
 }
-@-moz-keyframes ani-mouse {
-	0% {
-	opacity: 1;
-	top: 29%;
-	}
-	15% {
-	opacity: 1;
-	top: 50%;
-	}
-	50% {
-	opacity: 0;
-	top: 50%;
-	}
-	100% {
-	opacity: 0;
-	top: 29%;
-	}
+.weather_icons_reverse {
+    fill: #4BFB6C;
+    width: 4rem;
+    height: 4rem;
+    display: block;
+    margin: auto auto -0.5rem auto;
 }
-@keyframes ani-mouse {
-	0% {
-	opacity: 1;
-	top: 29%;
-	}
-	15% {
-	opacity: 1;
-	top: 50%;
-	}
-	50% {
-	opacity: 0;
-	top: 50%;
-	}
-	100% {
-	opacity: 0;
-	top: 29%;
-	}
-}
- .scroll-btn {
-	display: block;
-	position: absolute;
-	left: 0;
-	right: 0;
-  top: 200%;
-	text-align: center;
-}
+/* navigation */
 
-.scroll-btn > *:hover,
-.scroll-btn > *:focus,
-.scroll-btn > *.active {
-	color: #ffffff;
+* {
+    box-sizing: border-box;
+    -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 }
-.scroll-btn > *:hover,
-.scroll-btn > *:focus,
-.scroll-btn > *:active,
-.scroll-btn > *.active {
-	opacity: 0.8;
-	filter: alpha(opacity=80);
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
-.scroll-btn .mouse {
-	position: relative;
-	display: block;
-	width: 33px;
-	height: 55px;
-	margin: 0 auto 20px;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
-  opacity: 0.5;
-	border-radius: 23px;
+.nav {
+    will-change: transform;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1;
+    background: #1a1a1a;
+    transform: translateY(-100%);
+    transition: all 0.4s cubic-bezier(0.23, 1, 0.32, 1);
 }
-.scroll-btn .mouse > * {
-	position: absolute;
-	display: block;
-	top: 80%;
-	left: 50%;
-	width: 8px;
-	height: 8px;
-	margin: -4px 0 0 -4px;
-	background: white;
-	border-radius: 50%;
-	-webkit-animation: ani-mouse 2.5s linear infinite;
-	-moz-animation: ani-mouse 2.5s linear infinite;
-	animation: ani-mouse 2.5s linear infinite;
+.nav--active {
+    transform: translateY(0);
 }
+.nav__list {
+    display: flex;
+}
+.nav__item {
+    flex: 1;
+    position: relative;
+    transition: all 0.45s cubic-bezier(0.23, 1, 0.32, 1);
+}
+.nav__item:hover {
+    opacity: 0.9;
+    color: #4BFB6C;
+}
+.nav__thumb {
+    height: 3rem;
+    transition: all 0.2s cubic-bezier(0.23, 1, 0.32, 1);
+}
+.nav__thumb:before {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-transform: uppercase;
+    opacity: 0;
+}
+.nav__label {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    color: #e6e6e6;
+    margin: 0;
+    font-size: 0.7rem;
+}
+.nav__label:hover {
+    color: #4BFB6C;
+    transition: all 0.3s ease-in-out;
+}
+@media only screen and (max-width: 500px) {
+    .nav__label {
+        font-size: 14px;
+    }
+    article.section__wrapper {
+        padding: 0 1rem;
+    }
+}
+.page {
+    margin: -0.5rem;
+    height: 100vh;
+    will-change: transform;
+    perspective: 400px;
+    overflow: hidden;
+    transition: all 0.45s cubic-bezier(0.23, 1, 0.32, 1);
+    transition-delay: 0.8s;
+}
+.page--close {
+    margin: -1vh -1vh 0vh -1vh;
+    transition: 0.45s;
+    transition-delay: 0.4s;
+}
+.section {
+    will-change: transform;
+    position: absolute;
+    width: 100%;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    background: #fff;
+    transform: translateX(100%);
+    transition: all 0.7s cubic-bezier(0.23, 1, 0.32, 1);
+}
+.section--hidden {
+    transform: translateX(-100%);
+}
+.section--active {
+    transform: translateX(0) rotateY(0);
+    z-index: 2;
+}
+.section__wrapper {
+    min-width: 100%;
+    padding: 0 5rem;
+    transform: translate(-50%, -50%);
+    position: absolute;
+    top: 47%;
+    left: 50%;
+    transition: all 0.45s;
+    transition-delay: 0.1s;
+}
+.section__wrapper--close {
+    padding: 0 5rem;
+    top: 50%;
+    transition: all 0.45s;
+    transition-delay: 0.1s;
+}
+.section__map {
+    min-width: 100%;
+    padding: 0 0rem;
+    transform: translate(-50%, -50%);
+    position: absolute;
+    top: 47%;
+    left: 50%;
+    transition: all 0.45s;
+    transition-delay: 0.1s;
+}
+.section__map--close {
+    padding: 0;
+    top: 50%;
+    transition: all 0.45s;
+    transition-delay: 0.1s;
+}
+.section__title {
+    margin: 0 0 1rem 0;
+    font-size: 0.8rem;
+    font-weight: normal;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    text-align: left;
+    font-weight: 600;
+    color: #1a1a1a;
+    font-family: 'Spoqa Han Sans', 'Spoqa Han Sans JP', 'Sans-serif';
+}
+.section__title:before {
+    content: '';
+    position: absolute;
+    top: 5rem;
+    margin: auto;
+    width: 10%;
+}
+.section p {
+    margin: 0 0 3rem 0;
+    font-size: 0.8rem;
+    font-weight: normal;
+    text-align: left;
+    font-weight: 400;
+    color: #1a1a1a;
+}
+.section p:last-child {
+    margin-bottom: 0;
+}
+.section:nth-child(1) {
+    background: url("../image/home.png") no-repeat center center fixed;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    z-index: 1;
+}
+.tbl-content a {
+    text-decoration: none;
+    border-bottom: 2px solid #4BFB6C;
+    color: inherit;
+    transition: background 0.1s cubic-bezier(.33, .66, .66, 1);
+}
+.tbl-content a:hover {
+    background: #4BFB6C;
+}
+.section:nth-child(2) {
+    color: #1a1a1a;
+    background: #F4F2F9;
+    background-image: url("data:image/svg+xml,%3Csvg%20version%3D%271.1%27%20id%3D%27Layer_1%27%20xmlns%3D%27http%3A//www.w3.org/2000/svg%27%20xmlns%3Axlink%3D%27http%3A//www.w3.org/1999/xlink%27%20x%3D%270px%27%20y%3D%270px%27%0A%20%20%20%20%20fill%3D%27#4BFB6C%27%20width%3D%27400px%27%20height%3D%27400px%27%20viewBox%3D%270%200%2012%2012%27%20enable-background%3D%27new%200%200%2012%2012%27%20xml%3Aspace%3D%27preserve%27%3E%0A%3Cpath%20d%3D%27M12%2C3.535V0H8.465L0%2C8.465V12h3.535L12%2C3.535z%20M0%2C0h3.535L0%2C3.535V0z%20M8.465%2C12L12%2C8.465V12H8.465z%27/%3E%0A%3C/svg%3E");
+}
+.section:nth-child(3) {
+    color: #1a1a1a;
+    background: #F4F2F9;
+    background-image: url("data:image/svg+xml,%3Csvg%20version%3D%271.1%27%20id%3D%27Layer_1%27%20xmlns%3D%27http%3A//www.w3.org/2000/svg%27%20xmlns%3Axlink%3D%27http%3A//www.w3.org/1999/xlink%27%20x%3D%270px%27%20y%3D%270px%27%0A%20%20%20%20%20width%3D%27200px%27%20height%3D%27200px%27%20viewBox%3D%270%200%2010%2010%27%20enable-background%3D%27new%200%200%2010%2010%27%20xml%3Aspace%3D%27preserve%27%3E%0A%3Crect%20fill%3D%27#4BFB6C%27%20width%3D%2710%27%20height%3D%273%27/%3E%0A%3C/svg%3E");
+}
+.section__2 a {
+    text-decoration: none;
+    border-bottom: 2px solid #4BFB6C;
+    box-shadow: inset 0 -4px 0 #4BFB6C;
+    color: inherit;
+    transition: background 0.1s cubic-bezier(.33, .66, .66, 1);
+}
+.section__2 a:hover {
+    background: #4BFB6C;
+}
+.section:nth-child(4) {
+    color: #1a1a1a;
+    background: #F4F2F9;
+    background-image: url("data:image/svg+xml, %3Csvg%20version%3D%271.1%27%20id%3D%27Layer_1%27%20xmlns%3D%27http%3A//www.w3.org/2000/svg%27%20xmlns%3Axlink%3D%27http%3A//www.w3.org/1999/xlink%27%20x%3D%270px%27%20y%3D%270px%27%0A%20%20%20%20%20fill%3D%27#4BFB6C%27%20width%3D%27300px%27%20height%3D%27300px%27%20viewBox%3D%270%200%2012%2012%27%20enable-background%3D%27new%200%200%2012%2012%27%20xml%3Aspace%3D%27preserve%27%3E%0A%3Cpath%20d%3D%27M12%2C3.535V0H8.465L0%2C8.465V12h3.535L12%2C3.535z%20M0%2C0h3.535L0%2C3.535V0z%20M8.465%2C12L12%2C8.465V12H8.465z%27/%3E%0A%3C/svg%3E");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+.section:nth-child(5) {
+    color: #1a1a1a;
+    background: #F4F2F9;
+    background-image: url("data:image/svg+xml, %3Csvg%20version%3D%271.1%27%20id%3D%27Layer_1%27%20xmlns%3D%27http%3A//www.w3.org/2000/svg%27%20xmlns%3Axlink%3D%27http%3A//www.w3.org/1999/xlink%27%20x%3D%270px%27%20y%3D%270px%27%0A%20%20%20%20%20fill%3D%27#4BFB6C%27%20width%3D%27300px%27%20height%3D%27300px%27%20viewBox%3D%270%200%2012%2012%27%20enable-background%3D%27new%200%200%2012%2012%27%20xml%3Aspace%3D%27preserve%27%3E%0A%3Cpath%20d%3D%27M12%2C3.535V0H8.465L0%2C8.465V12h3.535L12%2C3.535z%20M0%2C0h3.535L0%2C3.535V0z%20M8.465%2C12L12%2C8.465V12H8.465z%27/%3E%0A%3C/svg%3E");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+/* about */
 
-@media only screen and (max-width: 1440px) {
-  .tbl-content {
-    height: 70vh;
-  }
+.accordion {
+    margin: auto;
+}
+.accordion input {
+    display: none;
+}
+.box {
+    position: relative;
+    transition: all .7s ease-in-out;
+}
+.box::before {
+    content: '';
+    position: absolute;
+    display: block;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    pointer-events: none;
+}
+.box-title {
+    width: calc(100% - 40px);
+    height: 64px;
+    line-height: 64px;
+    padding: 0 20px;
+    display: inline-block;
+    cursor: pointer;
+    font-size: 0.8rem;
+    font-weight: normal;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    text-align: left;
+    font-weight: 600;
+    color: #1a1a1a;
+    font-family: 'Spoqa Han Sans', 'Spoqa Han Sans JP', 'Sans-serif';
+    user-select: none;
+}
+.box-title:hover {
+    color: #B6B6B6;
+}
+.box-content {
+    width: calc(100% - 40px);
+    padding: 1em;
+    display: none;
+    font-size: 0.8rem;
+    font-weight: normal;
+    text-align: left;
+    font-weight: 400;
+    color: #1a1a1a;
+}
+.box-content a {
+    text-decoration: none;
+    border-bottom: 2px solid #4BFB6C;
+    color: inherit;
+    transition: background 0.1s cubic-bezier(.33, .66, .66, 1);
+}
+.box-content a:hover {
+    background: #4BFB6C;
+}
+.box-close {
+    position: absolute;
+    height: 64px;
+    width: 100%;
+    top: 0;
+    left: 0;
+    cursor: pointer;
+    display: none;
+}
+input:checked + .box {
+    height: auto;
+}
+input:checked + .box .box-content {
+    transition: height 0.1s all, 0.1s linear;
+}
+input:checked + .box .box-title {
+    border-bottom: 1px solid rgba(0, 0, 0, .18);
+}
+input:checked + .box .box-content,
+input:checked + .box .box-close {
+    display: inline-block;
+}
+.arrows section .box-title {
+    padding-left: 4rem;
+    width: calc(100% - 64px);
+}
+.arrows section .box-title:before {
+    position: absolute;
+    display: block;
+    content: '\203a';
+    font-size: 18pt;
+    left: 20px;
+    top: -2px;
+    color: #4BFB6C;
+}
+input:checked + section.box .box-title:before {
+    transform: rotate(90deg);
+    transition: transform .7s ease-in-out;
+}
+/* socials */
+/* Icons */
+
+.social-icons {
+    margin-top: 1em;
+}
+.social-icons a {
+    font-size: 0.8rem;
+    border-bottom: none;
+    color: #1a1a1a;
+    background: none;
+    border-radius: 4px;
+    font-family: fontawesome;
+    text-align: center;
+    text-decoration: none;
+    position: relative;
+    display: inline-block;
+    width: 2.4rem;
+    height: 2.4rem;
+    padding-top: 0.6rem;
+    margin: 0 2px;
+    transition: .5s;
+}
+/* font awesome icons */
+
+.social-icons a:nth-of-type(1):before {
+    content: '\f015';
+}
+.social-icons a:nth-of-type(2):before {
+    content: '\f09a';
+}
+.social-icons a:nth-of-type(3):before {
+    content: '\f099';
+}
+.social-icons a:nth-of-type(4):before {
+    content: '\f09b';
+}
+.social-icons a:hover {
+    background: #1a1a1a;
+    color: #fff;
+}
+/* nav */
+
+.burger {
+    position: absolute;
+    right: 0;
+    top: 100%;
+    width: 3rem;
+    height: 3rem;
+    background: #1a1a1a;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.burger__patty {
+    position: relative;
+    width: 60%;
+    height: 2px;
+    background: #fff;
+    transition: all 0.45s cubic-bezier(0.23, 1, 0.32, 1);
+}
+.burger__patty:before,
+.burger__patty:after {
+    will-change: transform;
+    content: "";
+    position: absolute;
+    left: 0;
+    background: #fff;
+    height: 2px;
+    width: 100%;
+    transition: all 0.45s cubic-bezier(0.23, 1, 0.32, 1);
+}
+.burger__patty:before {
+    top: -10px;
+}
+.burger__patty:after {
+    top: 10px;
+}
+.burger--close .burger__patty {
+    transform: rotate(45deg);
+}
+.burger--close .burger__patty:before {
+    transform: rotate(-90deg) translate(-9px, 0);
+}
+.burger--close .burger__patty:after {
+    opacity: 0;
+    transform: scaleX(0);
+}
+.customoverlay {
+    position: relative;
+    bottom: 5rem;
+    border-radius: 6px;
+    float: left;
+}
+.customoverlay:nth-of-type(n) {
+    border: 0;
+    box-shadow: 0px 1px 3px #888;
+}
+.customoverlay--coming a {
+    display: block;
+    text-decoration: none;
+    color: #000;
+    text-align: center;
+    border-radius: 4px;
+    font-weight: bold;
+    overflow: hidden;
+    background: #4BFB6C url("../image/map/right-arrow.svg") no-repeat right 9px center;
+    background-size: 1rem 1rem;
+}
+.customoverlay--past a {
+    display: block;
+    text-decoration: none;
+    color: #000;
+    text-align: center;
+    border-radius: 4px;
+    font-size: 0.8rem;
+    font-weight: bold;
+    overflow: hidden;
+    background: #B6B6B6 url("../image/map/right-arrow.svg") no-repeat right 9px center;
+    background-size: 1rem 1rem;
+}
+.customoverlay .title {
+    display: block;
+    text-align: center;
+    background: #fff;
+    margin-right: 35px;
+    padding: 0.7rem 0.7rem;
+    font-size: 0.7rem;
+    font-weight: 400;
+}
+.customoverlay:after {
+    content: '';
+    width: 0;
+    height: 0;
+    border-left: 0.7rem solid transparent;
+    border-right: 0.7rem solid transparent;
+    border-top: 0.7rem solid #fff;
+    position: absolute;
+    bottom: -0.4rem;
+    left: 4rem;
 }
