edited wrong image path

--- a/myrun/templates/marathon/event_list.html
+++ b/myrun/templates/marathon/event_list.html
@@ -3,7 +3,7 @@
 <html lang="ko">
   <head>
     <meta charset="utf-8">
-    <link title="favicon" href="{% static 'image/favicon/logo.png' %}" rel="shortcut icon" type="image/png" >
+    <link title="favicon" href="http://www.sujinlee.me/static/image/favicon/logo.png" rel="shortcut icon" type="image/png" >
     <title>RUN UNLIMITED KOREA</title>
     <meta name="description" content="마라톤 온라인이 제공하는 2016년간 행사 데이터를 크롤링한 웹페이지입니다">
     <meta name="viewport" content="initial-scale=1, width=device-width, maximum-scale=1, minimum-scale=1, user-scalable=no">
@@ -12,9 +12,9 @@
     <meta property="og:url" content="http://www.sujinlee.me/runkorea/" />
     <meta property="og:type" content="website" />
     <meta property="article:author" content="https://www.facebook.com/sujiniworld/" />
-    <meta property="og:title" content="#마라톤, 같이 달려볼래? 한눈에 보는 2016 마라톤 대회" />
+    <meta property="og:title" content="RUN LIMITED KOREA | 전국 2016 마라톤 대회" />
     <meta property="og:description" content="마라톤 온라인이 제공하는 2016년간 행사 데이터를 크롤링한 웹페이지입니다" />
-    <meta property="og:image" content="{% static 'image/home.png' %}" />
+    <meta property="og:image" content="http://www.sujinlee.me/static/image/home.png" />
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css" rel='stylesheet' type='text/css'>
     <link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-jp.css' rel='stylesheet' type='text/css'>
@@ -85,7 +85,7 @@
           <div>
             <h1><mark class="highlighter">RUN UNLIMITED</mark> <mark class="dash">// KOREA</mark></h1>
             <h2>한번도 안 달려본 사람은 있어도 <br>한번만 달려본 사람은 없습니다 </h2>
-            <h2>올해 전국  {{ count_total_events}}개 마라톤 대회 중</br>
+            <h2>올해 2016년, 전국  {{ count_total_events}}개 마라톤 대회 중</br>
               {{ count_upcoming_events }}개 대회가 남았습니다
             </h2>
             <h2>지금 도전해보세요 </h2>
