add compression image

--- a/myrun/templates/marathon/event_list.html
+++ b/myrun/templates/marathon/event_list.html
@@ -7,14 +7,13 @@
     <title>RUN UNLIMITED KOREA</title>
     <meta name="description" content="마라톤 온라인이 제공하는 2016년간 행사 데이터를 크롤링한 웹페이지입니다">
     <meta name="viewport" content="initial-scale=1, width=device-width, maximum-scale=1, minimum-scale=1, user-scalable=no">
-    <meta name="author" content="Sujin Lee">
     <meta property="fb:app_id" content="1081681621896558" />
     <meta property="og:url" content="http://www.sujinlee.me/runkorea/" />
     <meta property="og:type" content="website" />
-    <meta property="article:author" content="https://www.facebook.com/sujiniworld/" />
+    <meta property="website:author" content="https://www.facebook.com/sujiniworld/" />
     <meta property="og:title" content="RUN LIMITED KOREA | 전국 2016 마라톤 대회" />
     <meta property="og:description" content="마라톤 온라인이 제공하는 2016년간 행사 데이터를 크롤링한 웹페이지입니다" />
-    <meta property="og:image" content="http://www.sujinlee.me/static/image/home.png" />
+    <meta property="og:image" content="http://www.sujinlee.me/static/image/home-min.png" />
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css" rel='stylesheet' type='text/css'>
     <link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-jp.css' rel='stylesheet' type='text/css'>
