head title changed

--- a/myrun/templates/marathon/event_list.html
+++ b/myrun/templates/marathon/event_list.html
@@ -11,7 +11,7 @@
     <meta property="og:url" content="http://www.sujinlee.me/runkorea/" />
     <meta property="og:type" content="website" />
     <meta property="og:author" content="https://www.facebook.com/sujiniworld" />
-    <meta property="og:title" content="RUN LIMITED KOREA | 전국 2016 마라톤 대회" />
+    <meta property="og:title" content="RUN LIMITED KOREA |  2016 전국 마라톤 대회" />
     <meta property="og:description" content="마라톤 온라인이 제공하는 2016년간 행사 데이터를 크롤링한 웹페이지입니다" />
     <meta property="og:image" content="http://www.sujinlee.me/static/image/home-min.png" />
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
